--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ itsdangerous==0.24
 Jinja2==2.8
 mailchimp==2.0.9
 MarkupSafe==0.23
+pbr==1.8.1
 Pillow==3.1.0
 prices==0.5.5
 psycopg2==2.6.1
@@ -23,3 +24,4 @@ virtualenv==13.1.2
 virtualenv-clone==0.2.6
 virtualenvwrapper==4.7.1
 Werkzeug==0.11.3
+whitenoise==3.2
