--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-tagging==0.4.1
 docopt==0.4.0
 ExifRead==2.1.2
 Flask==0.10.1
+gunicorn==19.6.0
 imagestore==2.9.1
 itsdangerous==0.24
 Jinja2==2.8
