--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==1.9.1
+django-appconf==1.0.2
 django-autocomplete-light==3.0.4
+django-compressor==2.0
 django-sortedm2m==1.1.1
 django-tagging==0.4.1
 docopt==0.4.0
@@ -15,7 +17,9 @@ pbr==1.8.1
 Pillow==3.1.0
 prices==0.5.5
 psycopg2==2.6.1
+rcssmin==1.0.6
 requests==2.10.0
+rjsmin==1.0.12
 satchless==1.1.3
 six==1.10.0
 sorl-thumbnail==12.3
